--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
 					<configuration>
-						<path>/</path>
+						<path>/event-tracker</path>
 						<contextReloadable>true</contextReloadable>
 					</configuration>
 				</plugin>
